src/objects/Contract_Ratification_BU_Member__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contract__r.Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COPE_New_Amount__c</fullName>
        <label>COPE New Amount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COPE_Pledge__c</fullName>
        <description>Curretn COPE Pledge</description>
        <label>Current COPE Pledge</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contract Ratification BU Members</relationshipLabel>
        <relationshipName>Contract_Ratification_BU_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Rat_BU_ID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Rat BU ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Record_Id__c</fullName>
        <formula>Contract__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Record Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <inlineHelpText>Hover to view Contract Detail</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract_Ratification__c</referenceTo>
        <relationshipLabel>BU Members</relationshipLabel>
        <relationshipName>Contract_Ratification_BU_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Covered__c</fullName>
        <description>80% Covered (Leader or Supporter)</description>
        <label>Covered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <label>Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Id__c</fullName>
        <label>Employer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_On_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form On File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Last_Name__c  &amp; &quot;, &quot; &amp;  First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Inc_New_COPE__c</fullName>
        <formula>IF( Inc_or_New_COPE_Amount__c &gt; 0, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Increased/New COPE Sign Up #</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inc_or_New_COPE_Amount__c</fullName>
        <formula>IF( COPE_New_Amount__c&gt;0  &amp;&amp; COPE_Pledge__c &gt; 0 , COPE_New_Amount__c - COPE_Pledge__c,COPE_New_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inc or New COPE Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Paid_Status__c</fullName>
        <label>Job Paid Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>PREACTIVE</fullName>
                </value>
                <value>
                    <fullName>INACTIVE</fullName>
                </value>
                <value>
                    <fullName>NONPAYER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Dues_Paid__c</fullName>
        <label>Last Dues Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberID__c</fullName>
        <label>MemberID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Status__c</fullName>
        <label>Member Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MEMBER</fullName>
                </value>
                <value>
                    <fullName>RELIGIOUS EXEMPTION</fullName>
                </value>
                <value>
                    <fullName>BECK/HUDSON SIMPLE</fullName>
                </value>
                <value>
                    <fullName>BECK/HUDSON CONT.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_In_Time__c</fullName>
        <label>Signed In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signed_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good Standing</fullName>
                </value>
                <value>
                    <fullName>Not In Good Standing</fullName>
                </value>
                <value>
                    <fullName>New Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turn_Out_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field for the turned out by,</description>
        <inlineHelpText>This is a lookup field for the turned out by,</inlineHelpText>
        <label>Turn Out By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contract Ratification BU Members (Turn Out By)</relationshipLabel>
        <relationshipName>Contract_Ratification_BU_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Turned_Out_By_Name__c</fullName>
        <description>Name of the Turn out by (in text)</description>
        <inlineHelpText>Name of the Turn out by (in text)</inlineHelpText>
        <label>TOB Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Worksite__c</fullName>
        <label>Worksite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Contract Ratification BU Member</label>
    <listViews>
        <fullName>Emanuel_July_3_2018</fullName>
        <columns>Full_Name__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Voted__c</columns>
        <columns>COPE_New_Amount__c</columns>
        <columns>COPE_Pledge__c</columns>
        <columns>Status__c</columns>
        <columns>Member_Status__c</columns>
        <columns>Covered__c</columns>
        <columns>Turn_Out_By__c</columns>
        <columns>Turned_Out_By_Name__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Contract__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>C-0114</value>
        </filters>
        <label>Emanuel - July 3 2018</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs</group>
            <group>AAs_Hospital</group>
            <group>Full_Access_Group</group>
            <group>Hospital_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sutter_Lakeside_July_3_2018</fullName>
        <columns>Full_Name__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Voted__c</columns>
        <columns>COPE_New_Amount__c</columns>
        <columns>COPE_Pledge__c</columns>
        <columns>Status__c</columns>
        <columns>Member_Status__c</columns>
        <columns>Covered__c</columns>
        <columns>Turn_Out_By__c</columns>
        <columns>Turned_Out_By_Name__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Contract__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>C-0111</value>
        </filters>
        <label>Sutter - Lakeside July 3 2018</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs</group>
            <group>AAs_Hospital</group>
            <group>Full_Access_Group</group>
            <group>Hospital_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sutter_Santa_Rosa_July_3_2018</fullName>
        <columns>Full_Name__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Voted__c</columns>
        <columns>COPE_New_Amount__c</columns>
        <columns>COPE_Pledge__c</columns>
        <columns>Status__c</columns>
        <columns>Member_Status__c</columns>
        <columns>Covered__c</columns>
        <columns>Turn_Out_By__c</columns>
        <columns>Turned_Out_By_Name__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Contract__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>C-0112</value>
        </filters>
        <label>Sutter - Santa Rosa July 3 2018</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs</group>
            <group>AAs_Hospital</group>
            <group>Full_Access_Group</group>
            <group>Hospital_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sutter_Solano_July_5_2018</fullName>
        <columns>Full_Name__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Voted__c</columns>
        <columns>COPE_New_Amount__c</columns>
        <columns>COPE_Pledge__c</columns>
        <columns>Status__c</columns>
        <columns>Member_Status__c</columns>
        <columns>Covered__c</columns>
        <columns>Turn_Out_By__c</columns>
        <columns>Turned_Out_By_Name__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Contract__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>C-0113</value>
        </filters>
        <label>Sutter - Solano July 5 2018</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs</group>
            <group>AAs_Hospital</group>
            <group>Full_Access_Group</group>
            <group>Hospital_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tenet_Hi_Desert_July_6_2018</fullName>
        <columns>Full_Name__c</columns>
        <columns>Signed_In__c</columns>
        <columns>Signed_In_Time__c</columns>
        <columns>Voted__c</columns>
        <columns>COPE_New_Amount__c</columns>
        <columns>COPE_Pledge__c</columns>
        <columns>Status__c</columns>
        <columns>Member_Status__c</columns>
        <columns>Covered__c</columns>
        <columns>Turn_Out_By__c</columns>
        <columns>Turned_Out_By_Name__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Contract__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>C-0115</value>
        </filters>
        <label>Tenet - Hi-Desert July 6 2018</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs</group>
            <group>AAs_Hospital</group>
            <group>Full_Access_Group</group>
            <group>Hospital_Division</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CRB-{0000}</displayFormat>
        <label>Contract Rat BU Member No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Ratification BU Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>